--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,10 +15,12 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^4.41.26",
+    "material-ui-dropzone": "^3.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-countdown": "^2.3.1",
     "react-dom": "^17.0.1",
+    "react-dropzone": "^11.3.1",
     "react-mount-animation": "0.0.9",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
