--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^17.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack": "^4.41.26",
+    "axios": "^0.21.1",
     "material-ui-dropzone": "^3.5.0",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
