--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -5,6 +5,7 @@
   "homepage": ".",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.24",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@nivo/core": "^0.67.0",
@@ -26,6 +27,7 @@
     "react-mount-animation": "0.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.1.1",
     "typescript": "^4.2.3",
     "web-vitals": "^1.1.0"
   },
