--- a/react/package.json
+++ b/react/package.json
@@ -4,59 +4,62 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
-    "@material-ui/data-grid": "^4.0.0-alpha.24",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/data-grid": "^4.0.0-alpha.26",
     "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.57",
-    "@nivo/core": "^0.67.0",
-    "@nivo/line": "^0.67.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
+    "@material-ui/lab": "^4.0.0-alpha.58",
+    "@nivo/chord": "^0.68.0",
+    "@nivo/core": "^0.68.0",
+    "@nivo/line": "^0.68.0",
+    "@nivo/tooltip": "^0.68.0",
+    "@testing-library/jest-dom": "^5.12.0",
+    "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.2",
+    "@types/react": "^17.0.4",
+    "@types/react-dom": "^17.0.3",
     "@types/react-router-dom": "^5.1.7",
-    "@types/webpack": "^4.41.26",
+    "@types/webpack": "^4.41.27",
     "axios": "^0.21.1",
     "material-ui-dropzone": "^3.5.0",
+    "node-fetch": "^2.6.1",
     "node-sass": "^5.0.0",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-countdown": "^2.3.1",
-    "react-dom": "^17.0.1",
-    "react-dropzone": "^11.3.1",
+    "react-dom": "^17.0.2",
+    "react-dropzone": "^11.3.2",
     "react-mount-animation": "0.0.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-spring": "^9.1.1",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.0"
+    "react-spring": "^9.1.2",
+    "typescript": "^4.2.4",
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "build": "webpack --mode development",
     "start": "webpack-dev-server --mode development"
   },
   "devDependencies": {
-    "@babel/core": "^7.13.10",
-    "@babel/preset-env": "^7.13.10",
-    "@babel/preset-react": "^7.12.13",
+    "@babel/core": "^7.14.0",
+    "@babel/preset-env": "^7.14.0",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@types/webpack-env": "^1.16.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^5.1.2",
+    "css-loader": "^5.2.4",
     "file-loader": "^6.2.0",
-    "fork-ts-checker-webpack-plugin": "^6.1.1",
+    "fork-ts-checker-webpack-plugin": "^6.2.5",
     "hard-source-webpack-plugin": "^0.13.1",
     "hook-shell-script-webpack-plugin": "^0.1.3",
     "html-loader": "^1.3.2",
-    "html-webpack-plugin": "^4.4.0",
-    "sass": "^1.32.8",
+    "html-webpack-plugin": "^4.5.2",
+    "sass": "^1.32.12",
     "sass-loader": "^10.1.1",
     "source-map-loader": "^1.1.3",
     "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.17",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
+    "ts-loader": "^8.2.0",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.2",
     "webpack-manifest-plugin": "^2.2.0"
   }
